--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@react-navigation/native-stack": "^6.11.0",
     "axios": "^1.7.3",
     "dotenv": "^16.4.5",
+    "lottie-ios": "^4.5.0",
+    "lottie-react-native": "^6.7.2",
     "react": "18.2.0",
     "react-native": "0.74.4",
     "react-native-config": "^1.5.3",
