--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-navigation/native-stack": "^6.11.0",
     "axios": "^1.7.3",
     "dotenv": "^16.4.5",
+    "formik": "^2.4.6",
     "lottie-ios": "^4.5.0",
     "lottie-react-native": "^6.7.2",
     "react": "18.2.0",
